--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 
     
     <title>React App</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
